tests/NormalTests/paczka1/fuzzy1/95872625.err
Error in line 7: 5OdrroM S248 26,5
Error in line 10: BjRZH S248 27,0
Error in line 11: BjRZH A475 67,8
Error in line 14: 5OdrroM A513 18,5
Error in line 6: dEtoksO S248 54,3
Error in line 23: 5OdrroM A475 38,8
Error in line 20: FN6E1G6848B A475 11,8
Error in line 32: BjRZH A475 28,7
Error in line 34: dEtoksO S248 18,74
Error in line 21: dEtoksO S879 56,4
Error in line 38: dEtoksO S248 16,0
